add file HocVienDAO, HocVienBus, but not done yet

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -70,5 +70,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAO\DAO.csproj">
+      <Project>{7bd5c71c-872d-4bbb-a0e8-4fb554587832}</Project>
+      <Name>DAO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{558a2432-11fd-4b30-a3f7-3a083762794a}</Project>
+      <Name>DTO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
