--- a/TrungTamTinHoc/TrungTamTinHoc.csproj
+++ b/TrungTamTinHoc/TrungTamTinHoc.csproj
@@ -91,5 +91,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BUS\BUS.csproj">
+      <Project>{ac99a8df-c7c5-4b80-80c6-9f02bd90ba1b}</Project>
+      <Name>BUS</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
