--- a/TrungTamTinHoc/TrungTamTinHoc.csproj
+++ b/TrungTamTinHoc/TrungTamTinHoc.csproj
@@ -69,6 +69,9 @@
     <EmbeddedResource Include="fDangNhap.resx">
       <DependentUpon>fDangNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fNhanViencs.resx">
+      <DependentUpon>fNhanViencs.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
