--- a/TrungTamTinHoc/TrungTamTinHoc.csproj
+++ b/TrungTamTinHoc/TrungTamTinHoc.csproj
@@ -69,6 +69,9 @@
     <EmbeddedResource Include="fDangNhap.resx">
       <DependentUpon>fDangNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fGiaoVu.resx">
+      <DependentUpon>fGiaoVu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fNhanViencs.resx">
       <DependentUpon>fNhanViencs.cs</DependentUpon>
     </EmbeddedResource>
