add 2 layer MonHoc & LopHocPhan, function find LopHocPhan

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -55,6 +55,8 @@
     </Compile>
     <Compile Include="HocVienBUS.cs" />
     <Compile Include="LopChuyenDeBUS.cs" />
+    <Compile Include="LopHocPhanBUS.cs" />
+    <Compile Include="MonHocBUS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
