--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -56,6 +56,8 @@
     </Compile>
     <Compile Include="HocVienDAO.cs" />
     <Compile Include="LopChuyenDeDAO.cs" />
+    <Compile Include="LopHocPhanDAO.cs" />
+    <Compile Include="MonHocDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
