add 3 layer HOCVIEN_DK_LOPHOCPHAN, add function Load hocvien from 1 class àn function register a HocVien to 1 class HocPhan

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HocVienBUS.cs" />
+    <Compile Include="HocVien_DK_LopHocPhanBUS.cs" />
     <Compile Include="LopChuyenDeBUS.cs" />
     <Compile Include="LopHocPhanBUS.cs" />
     <Compile Include="MonHocBUS.cs" />
