add function dangky thilai

--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -56,6 +56,7 @@
     <Compile Include="HocVienBUS.cs" />
     <Compile Include="HocVien_DK_LopChuyenDeBUS.cs" />
     <Compile Include="HocVien_DK_LopHocPhanBUS.cs" />
+    <Compile Include="HocVien_LichThiBUS.cs" />
     <Compile Include="LichThiBUS.cs" />
     <Compile Include="LopChuyenDeBUS.cs" />
     <Compile Include="LopHocPhanBUS.cs" />
