--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -57,6 +57,7 @@
     <Compile Include="HocVienDAO.cs" />
     <Compile Include="HocVien_DK_LopChuyenDeDAO.cs" />
     <Compile Include="HocVien_DK_LopHocPhanDAO.cs" />
+    <Compile Include="HocVien_LichThiDAO.cs" />
     <Compile Include="LichThiDAO.cs" />
     <Compile Include="LopChuyenDeDAO.cs" />
     <Compile Include="LopHocPhanDAO.cs" />
