--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HoaDon.cs" />
     <Compile Include="HocVien.cs" />
     <Compile Include="HocVien_DK_LopChuyenDe.cs" />
     <Compile Include="HocVien_DK_LopHocPhan.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="LopChuyenDe.cs" />
     <Compile Include="LopHocPhan.cs" />
     <Compile Include="MonHoc.cs" />
+    <Compile Include="NguoiDung.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
