--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CHiTietHoaDonChuyenDeDAO.cs" />
+    <Compile Include="ChiTietHoaDonDAO.cs" />
     <Compile Include="ChuyenDeDAO.cs" />
     <Compile Include="DataProvider.cs" />
     <Compile Include="Form1.cs">
