--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietHoaDon.cs" />
+    <Compile Include="ChiTietHoaDonChuyenDe.cs" />
     <Compile Include="ChuyenDe.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
