--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GiaoVienDAO.cs" />
     <Compile Include="HoaDonDAO.cs" />
     <Compile Include="HocVienDAO.cs" />
     <Compile Include="HocVien_DK_LopChuyenDeDAO.cs" />
