--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GiaoVien.cs" />
     <Compile Include="HoaDon.cs" />
     <Compile Include="HocVien.cs" />
     <Compile Include="HocVien_DK_LopChuyenDe.cs" />
