--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -56,6 +56,8 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GiaoVienBUS.cs" />
+    <Compile Include="GiaoVien_ChuyenDeBUS.cs" />
+    <Compile Include="GiaoVien_MonHocBUS.cs" />
     <Compile Include="HoaDonBUS.cs" />
     <Compile Include="HocVienBUS.cs" />
     <Compile Include="HocVien_DK_LopChuyenDeBUS.cs" />
